--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <div class="container d-flex align-items-sm-center h-100">
         <div class="row">
           <header>
-            <h1> Vasila Mirshamsova, ..... would you like to .. </h1>
+            <h1> Vasila Mirshamsova, ....... </h1>
           </header> 
           <div class="buffer"></div>
           <section class=""> 
             <a href="secondPage.html">
-              <button class="text-uppercase btn btn-primary btn-xl"> To what? </button>
+              <button class="text-uppercase btn btn-primary btn-xl"> Yes? </button>
             </a>
           </section>
         </div>
