--- a/secondPage.html
+++ b/secondPage.html
@@ -16,7 +16,7 @@
     <div class="container d-flex align-items-sm-center h-100">
         <div class="row">
           <header >
-            <h1 class=""> .... to ..... ummmmmm ...... go ....</h1>
+            <h1 class=""> Would you like to.. ummmmmm ...... go ....</h1>
           </header> 
           <div class="buffer"></div>
           <a href="thirdPage.html">
